--- a/ios-dangerous-webview-practice/Base.lproj/Main.storyboard
+++ b/ios-dangerous-webview-practice/Base.lproj/Main.storyboard
@@ -29,6 +29,10 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="DangerousWebView" destination="mn1-8o-8v3" id="lAh-Ha-Oti"/>
+                        <outlet property="dangerousWebView" destination="mn1-8o-8v3" id="ZU6-Sc-LJS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
